--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
         "leader",
         "add_member",
         "profile_member",
-        "presence"
+        "presence",
+        "news"
     ]
 }
