--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
     flutter_rating_bar: ^4.0.1
     url_launcher: ^6.1.6
     blur: ^3.1.0
-    flutter_svg: ^1.1.5
+    flutter_svg:
     custom_clippers: ^2.0.0
     badges: ^2.0.3
     flutter_markdown: ^0.6.12
@@ -41,6 +41,7 @@ dependencies:
     qr_flutter: ^4.0.0
     path_provider: ^2.0.11
     flutter_secure_storage:
+    webview_flutter: ^4.0.6
 
 dev_dependencies:
     flutter_test:
