--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,11 @@ dependencies:
     flutter_rating_bar: ^4.0.1
     url_launcher: ^6.1.6
     blur: ^3.1.0
-    flutter_svg:
+    flutter_svg: ^0.22.0
     custom_clippers: ^2.0.0
     badges: ^2.0.3
     flutter_markdown: ^0.6.12
-    dotted_border: ^2.0.0+3
+    # dotted_border: ^2.0.0+3
     hive: ^2.2.3
     faker_dart: ^0.1.11
     syncfusion_flutter_charts: ^20.3.58
@@ -41,7 +41,7 @@ dependencies:
     qr_flutter: ^4.0.0
     path_provider: ^2.0.11
     flutter_secure_storage:
-    webview_flutter: ^4.0.6
+    flutter_html: ^2.2.1
 
 dev_dependencies:
     flutter_test:
