--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,6 @@ dependencies:
     cupertino_icons: ^1.0.2
     freezed_annotation: ^2.1.0
     json_annotation: ^4.7.0
-    cloud_firestore: ^4.3.1
-    google_sign_in: ^5.4.3
     intl: ^0.17.0
     google_fonts: ^3.0.1
     material_design_icons_flutter: ^5.0.6996
@@ -36,12 +34,11 @@ dependencies:
     hive: ^2.2.3
     faker_dart: ^0.1.11
     syncfusion_flutter_charts: ^20.3.58
-    bitsdojo_window: ^0.1.5
     mobile_scanner: ^2.1.0
     qr_flutter: ^4.0.0
     path_provider: ^2.0.11
-    flutter_secure_storage:
     flutter_html: ^2.2.1
+    flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
     flutter_test:
